k8s/manifests/apps/dnscrypt-proxy/dnscrypt-proxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dnscrypt-proxy
  # Unfortunately it's not easy to get envoy gateway to listen on a "dynamic"
  # address so we use dnscrypt-proxy directly in hostNetwork mode
  labels:
    pod-security.kubernetes.io/enforce: privileged
    gateway.infra.services/allow-routes: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnscrypt-proxy
spec:
  replicas: 1
  template:
    spec:
      automountServiceAccountToken: false
      hostNetwork: true
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: main
          image: ghcr.io/michaelbeaumont/dnscrypt-proxy:2.1.18
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: monitoring-ui
              containerPort: 12280
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            tcpSocket:
              port: 53
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: 53
          volumeMounts:
            - mountPath: /dnscrypt-proxy.toml
              subPath: dnscrypt-proxy.toml
              name: shared-config
            - mountPath: /var/cache/dnscrypt-proxy
              name: cache
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              memory: 500Mi
      volumes:
        - name: template-config
          configMap:
            name: config
        - name: shared-config
          emptyDir:
            sizeLimit: 2Mi
        - name: cache
          emptyDir:
            sizeLimit: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dnscrypt-proxy
spec:
  ports:
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
    - port: 80
      targetPort: monitoring-ui
      protocol: TCP
      name: monitoring-ui
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-ui
  labels:
    external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: []
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dnscrypt-proxy
          port: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gateway-ingress
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    # Envoy gateway is running on hostNetwork
    - fromEntities:
        - host
        - remote-node
